fix: pad grid on smaller screens

--- a/web/src/main/webapp/css/home.less
+++ b/web/src/main/webapp/css/home.less
@@ -159,7 +159,7 @@ div.table-cell {
 
 .layout-list {
   list-style-type: none;
-  padding: 0;
+  padding: 0 12px;
   margin: auto;
   max-width: 1230px;
 
